--- a/projekat DT.html
+++ b/projekat DT.html
@@ -453,7 +453,7 @@
 		<p>Ostali pripadnici Saveznika</p></div>
 
 	<div class="container">
-		<img src="nemacka.jpg" class="slika">
+		<img src="paprika1.jpg" class="slika">
 		<div class="container2">
 			<div class="container3">Nemačka</div>
 		</div>
